--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "whos-that-pokemon",
+  "name": "who's-that-pokemon",
   "version": "0.1.0",
   "private": true,
-  "author": "Vishal",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
